# project-c

./: .gitignore  LICENSE  README.md  package-lock.json  workspace.code-workspace
backend/api/: .gitignore  README.md  dev.cmd  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/api/btb/: __init__.py  auth.py  datasources.py  graphql.py  models.py
backend/api/btb/api/: __init__.py  __main__.py  auth.py  constants.py  datasources.py  error.py  graphql.py  jsonlogging.py  models.py  wsgi.py  xray.py
backend/api/btb/api/schema/: __init__.py
backend/api/btb/cognito/: __init__.py
backend/api/btb/jsd/: __init__.py  __main__.py
backend/api/btb/schema/: __init__.py
backend/api/btb/templates/: __init__.py  __main__.py  code.html  code.py  load.py  match.html  match.py  render.py  reset.html  reset.py  send.py  styles.css  template.py
backend/api/btb/update/: __init__.py  __main__.py
backend/api/pgsql/: 00 db-create.pgsql  01 clean.pgsql  10 tables.pgsql  20 views.pgsql  31 real-data.pgsql  80 test-data.pgsql  99 queries.pgsql  clean.pgsql  db-create.pgsql  dev-schema.pgsql  docker-compose.yml  live-schema.pgsql  queries.pgsql  real-data.pgsql  schema.pgsql  test-data.pgsql
backend/api/pgsql/dev/: 01 clean.pgsql  80 test-data.pgsql
backend/api/src/: app.py  handler.py
backend/api/src/auth/: __init__.py  auth_required.py  constants.py  middleware.py  principal.py
backend/api/src/db/: __init__.py  connection.py  models.py
backend/api/src/schema/: __init__.py  context.py  mutation.py  query.py
frontend/: codegen.yml  (+9 more)
(+334 files in other folders)
